--- a/tickets.html
+++ b/tickets.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Atendimento Oasis</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Atendimento Oasis</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
-<body class="dark">
+<body>
 
 <div class="layout">
 
+  <!-- MENU LATERAL -->
   <aside class="sidebar">
-    <h2>🏛️ Atendimento Oasis</h2>
-    <button onclick="abrirAba('solicitacoes')">🎫 Faça sua Solicitação</button>
-    <button onclick="abrirAba('precos')">💰 Preços</button>
-    <button onclick="logout()">🚪 Sair</button>
+    <div class="logo">
+      <img src="logo-oasis.png" alt="Oasis">
+      <h2>Atendimento Oasis</h2>
+    </div>
+
+    <button onclick="mostrarAba('solicitacoes')">🎫 Faça sua Solicitação</button>
+    <button onclick="mostrarAba('tickets')">🎟 Tickets</button>
+    <button onclick="mostrarAba('precos')">💰 Preços</button>
+    <button onclick="sair()">🚪 Sair</button>
   </aside>
 
+  <!-- CONTEÚDO -->
   <main class="content">
 
     <!-- ABA SOLICITAÇÕES -->
     <section id="solicitacoes" class="aba active">
-      <h2>🎫 Sistema de Tickets</h2>
-
-      <p>
+      <h1>🎫 Sistema de Tickets</h1>
+      <p class="info">
         • 1 ticket ativo por categoria<br>
-        • Atendimento em até 24h<br>
+        • Atendimento em até 24 horas<br>
         • Mantenha o respeito
       </p>
 
-      <div class="categorias">
+      <h2>Solicitações</h2>
+      <div class="botoes">
         <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
         <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
         <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
@@ -41,38 +47,61 @@
       </div>
     </section>
 
-    <!-- CHAT -->
+    <!-- ABA CHAT -->
     <section id="chat" class="aba">
+      <button class="voltar" onclick="mostrarAba('solicitacoes')">⬅ Voltar</button>
       <h2 id="chatTitulo"></h2>
+
       <div id="mensagens" class="chat"></div>
 
-      <textarea id="mensagem" placeholder="Digite sua mensagem..."></textarea>
-      <button onclick="enviarMensagem()">Enviar</button>
+      <div class="envio">
+        <input id="mensagem" placeholder="Digite sua mensagem...">
+        <button onclick="enviarMensagem()">Enviar</button>
+      </div>
+    </section>
+
+    <!-- ABA TICKETS -->
+    <section id="tickets" class="aba">
+      <h1>🎟 Tickets</h1>
+      <div class="botoes">
+        <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
+        <button onclick="abrirCategoria('Falar com o Juiz')">⚖ Falar com o Juiz</button>
+        <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
+        <button onclick="abrirCategoria('Processos')">📁 Processos</button>
+      </div>
     </section>
 
     <!-- ABA PREÇOS -->
     <section id="precos" class="aba">
-      <pre>
-⚖️ Serviços – Supremo Tribunal Oasis ⚖️
+      <h1>💰 Serviços Disponíveis</h1>
 
-Delegacia Sul: $20.000
-Delegacia PRF: $30.000
+      <div class="preco-box">
+        <h2>⚖ Atendimentos Jurídicos</h2>
+        <p>Delegacia Sul — $20.000</p>
+        <p>Delegacia PRF — $30.000</p>
+      </div>
 
-Redução de Pena:
-• Advogado: -20%
-• Confissão: -10%
-• Bom comportamento: -10%
+      <div class="preco-box">
+        <h2>🔫 Porte de Arma</h2>
+        <p>Emissão — $20.000</p>
+      </div>
 
-🔫 Porte de Arma: $20.000
+      <div class="preco-box">
+        <h2>💍 Certidões Civis</h2>
+        <p>Casamento — $150.000</p>
+        <p>Divórcio — $200.000</p>
+        <p>Troca de Nome — $250.000</p>
+        <p>Adoção — $50.000</p>
+        <p>Nascimento — $50.000</p>
+        <p>Jovem Aprendiz — $30.000</p>
+      </div>
 
-💍 Certidões:
-Casamento: $150.000
-Divórcio: $200.000
-Troca de Nome: $250.000
-Adoção: $50.000
-Nascimento: $50.000
-Jovem Aprendiz: $30.000
-      </pre>
+      <div class="preco-box">
+        <h2>🧾 Ações Jurídicas</h2>
+        <p>Ação Judicial — $50.000</p>
+        <p>Limpeza de Ficha (1–3) — $50.000</p>
+        <small>+ $10.000 a partir da 4ª ocorrência</small>
+      </div>
     </section>
 
   </main>
