--- a/tickets.html
+++ b/tickets.html
@@ -9,22 +9,29 @@
 <body>
 <div class="layout">
 
+  <!-- MENU LATERAL -->
   <aside class="sidebar">
     <img src="logo-oasis.png" class="logo">
+
     <button onclick="mostrarAba('solicitacoes')">🎫 Solicitações</button>
+    <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
     <button onclick="mostrarAba('tickets')">🎟 Tickets</button>
     <button onclick="mostrarAba('precos')">💰 Preços</button>
     <button onclick="sair()">🚪 Sair</button>
   </aside>
 
+  <!-- CONTEÚDO -->
   <main class="content">
 
+    <!-- SOLICITAÇÕES -->
     <section id="solicitacoes" class="aba active">
-      <h1>🎫 Sistema de Atendimento</h1>
+      <h1>🎫 Sistema de Tickets</h1>
       <p class="info">
-        • 1 ticket ativo por categoria<br>
-        • Atendimento em até 24h<br>
-        • Mantenha o respeito
+        Bem-vindo ao nosso sistema de atendimento.<br><br>
+        • Apenas usuários autorizados podem criar tickets<br>
+        • Limite de 1 ticket ativo por categoria<br>
+        • Resposta em até 24 horas<br>
+        • Mantenha a conversa respeitosa e objetiva
       </p>
 
       <div class="grid">
@@ -39,38 +46,89 @@
       </div>
     </section>
 
+    <!-- EM ANDAMENTO -->
+    <section id="andamento" class="aba">
+      <h1>🕒 Tickets em andamento</h1>
+      <p class="info">
+        Aqui estão seus tickets abertos no momento.<br>
+        Clique em um deles para continuar o atendimento.
+      </p>
+
+      <div id="lista-andamento" class="lista-tickets"></div>
+    </section>
+
+    <!-- TICKETS -->
     <section id="tickets" class="aba">
-      <h1>🎟 Tickets</h1>
+      <h1>🎟 Tickets Administrativos</h1>
+
       <div class="grid">
-        <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
-        <button onclick="abrirCategoria('Falar com o Juiz')">⚖ Juiz</button>
-        <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
+        <button onclick="abrirCategoria('Denúncia')">⚠️ Denúncia</button>
+        <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
+        <button onclick="abrirCategoria('Suporte')">🛠️ Suporte</button>
         <button onclick="abrirCategoria('Processos')">📁 Processos</button>
       </div>
     </section>
 
+    <!-- CHAT -->
     <section id="chat" class="aba">
       <button class="voltar" onclick="mostrarAba('solicitacoes')">⬅ Voltar</button>
       <h2 id="chatTitulo"></h2>
+
       <div id="mensagens" class="chat"></div>
+
       <div class="envio">
         <input id="mensagem" placeholder="Digite sua mensagem">
         <button onclick="enviarMensagem()">Enviar</button>
       </div>
     </section>
 
+    <!-- PREÇOS -->
     <section id="precos" class="aba">
-      <h1>💰 Serviços</h1>
+      <h1>⚖️ Serviços Disponíveis ao Público – Supremo Tribunal Oasis ⚖️</h1>
+
       <div class="preco-box">
-        <h2>⚖ Jurídico</h2>
-        <p>Delegacia Sul — $20.000</p>
-        <p>Delegacia PRF — $30.000</p>
+        <h2>🏛️ Atendimentos Jurídicos</h2>
+        <p>Delegacia Sul — <b>$ 20.000</b></p>
+        <p>Delegacia PRF — <b>$ 30.000</b></p>
+
+        <h3>Redução de Pena (em caso de condenação)</h3>
+        <ul>
+          <li>Presença do advogado: -20% (anulado em caso de réu primário)</li>
+          <li>Colaboração com as investigações: valor negociável</li>
+          <li>Confissão do crime: -10%</li>
+          <li>Bom comportamento: -10%</li>
+        </ul>
+        <p><b>Total possível de redução: até 40%</b></p>
       </div>
+
       <div class="preco-box">
-        <h2>💍 Certidões</h2>
-        <p>Casamento — $150.000</p>
-        <p>Divórcio — $200.000</p>
-        <p>Troca de Nome — $250.000</p>
+        <h2>🔫 Porte de Arma</h2>
+        <p>Emissão de porte legal — <b>$ 20.000</b></p>
+      </div>
+
+      <div class="preco-box">
+        <h2>💍 Certidões Civis</h2>
+        <p>Casamento (com discurso personalizado) — <b>$ 150.000</b></p>
+        <p>Divórcio — <b>$ 200.000</b></p>
+        <p>Troca de Nome — <b>$ 250.000</b></p>
+        <p>Adoção — <b>$ 50.000</b></p>
+        <p>Nascimento — <b>$ 50.000</b></p>
+        <p>Jovem Aprendiz — <b>$ 30.000</b></p>
+      </div>
+
+      <div class="preco-box">
+        <h2>🏢 Alvará de Funcionamento</h2>
+        <p>Abertura — <b>$ 150.000</b></p>
+        <p>Renovação — <b>$ 60.000</b></p>
+      </div>
+
+      <div class="preco-box">
+        <h2>🧾 Ações Jurídicas</h2>
+        <p>Ação Judicial (entrada de processo) — <b>$ 50.000</b></p>
+        <p>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <b>$ 50.000</b></p>
+        <p class="obs">
+          Obs.: A partir da 4ª ocorrência, acréscimo de <b>$ 10.000</b> por infração.
+        </p>
       </div>
     </section>
 
