--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Central de Atendimento Oasis</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Tribunal de Justiça de Oasis</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="center dark">
+<body class="bg-paper">
 
-<div class="card">
-  <h2>🌹 Central de Atendimento Oasis</h2>
-  <p>Faça login com seu Discord para abrir solicitações</p>
+<header class="header">
+  <img src="logo-oasis.png" class="logo" />
+  <h1>Tribunal de Justiça de Oasis</h1>
+  <p>Central Oficial de Atendimento ao Cidadão</p>
+</header>
 
-  <a class="btn"
-     href="https://sistema-oasis-auth.hinarahelo.workers.dev/login">
-     🔐 Entrar com Discord
-  </a>
-</div>
+<main class="login-container">
+  <div class="login-card">
+    <h2>Central de Atendimento</h2>
+    <p>
+      Para abrir solicitações, acompanhar processos e acessar serviços oficiais,
+      é necessário realizar a autenticação.
+    </p>
+
+    <a class="btn-primary" href="login.html">
+      🔐 Entrar com Discord
+    </a>
+  </div>
+</main>
+
+<footer class="footer">
+  Tribunal de Justiça de Oasis © Todos os direitos reservados
+</footer>
 
 </body>
 </html>
