--- a/tickets.html
+++ b/tickets.html
@@ -1,139 +1,139 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Atendimento Oasis</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Sistema de Atendimento — Tribunal de Justiça de Oasis</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+<body class="bg-paper">
 
-<body>
-<div class="layout">
+<header class="header small">
+  <img src="logo-oasis.png" class="logo small" />
+  <div>
+    <h1>Tribunal de Justiça de Oasis</h1>
+    <span>Sistema Oficial de Atendimento</span>
+  </div>
+</header>
 
-  <!-- MENU LATERAL -->
-  <aside class="sidebar">
-    <img src="logo-oasis.png" class="logo">
+<nav class="nav-bar">
+  <button onclick="mostrarAba('solicitacoes')">📂 Solicitações</button>
+  <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
+  <button onclick="mostrarAba('tickets')">🎫 Tickets</button>
+  <button onclick="mostrarAba('precos')">💰 Preços</button>
+  <button onclick="sair()">🚪 Sair</button>
+</nav>
 
-    <button onclick="mostrarAba('solicitacoes')">🎫 Solicitações</button>
-    <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
-    <button onclick="mostrarAba('tickets')">🎟 Tickets</button>
-    <button onclick="mostrarAba('precos')">💰 Preços</button>
-    <button onclick="sair()">🚪 Sair</button>
-  </aside>
+<main class="content">
 
-  <!-- CONTEÚDO -->
-  <main class="content">
+<!-- SOLICITAÇÕES -->
+<section id="solicitacoes" class="aba active">
+  <h2>📂 Faça sua Solicitação</h2>
+  <p class="info-box">
+    Selecione abaixo a categoria correspondente à sua solicitação.
+    Apenas um ticket ativo por categoria.
+  </p>
 
-    <!-- SOLICITAÇÕES -->
-    <section id="solicitacoes" class="aba active">
-      <h1>🎫 Sistema de Tickets</h1>
-      <p class="info">
-        Bem-vindo ao nosso sistema de atendimento.<br><br>
-        • Apenas usuários autorizados podem criar tickets<br>
-        • Limite de 1 ticket ativo por categoria<br>
-        • Resposta em até 24 horas<br>
-        • Mantenha a conversa respeitosa e objetiva
-      </p>
+  <div class="category-grid">
+    <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
+    <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
+    <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
+    <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
+    <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
+    <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
+    <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
+    <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
+  </div>
+</section>
 
-      <div class="grid">
-        <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
-        <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
-        <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-        <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
-        <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
-        <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
-        <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-        <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
-      </div>
-    </section>
+<!-- EM ANDAMENTO -->
+<section id="andamento" class="aba">
+  <h2>🕒 Tickets em Andamento</h2>
+  <p>Lista dos seus tickets ativos para acompanhamento.</p>
+  <div id="listaTickets" class="card-list"></div>
+</section>
 
-    <!-- EM ANDAMENTO -->
-    <section id="andamento" class="aba">
-      <h1>🕒 Tickets em andamento</h1>
-      <p class="info">
-        Aqui estão seus tickets abertos no momento.<br>
-        Clique em um deles para continuar o atendimento.
-      </p>
+<!-- CHAT -->
+<section id="chat" class="aba">
+  <h2 id="chatTitulo">💬 Atendimento</h2>
 
-      <div id="lista-andamento" class="lista-tickets"></div>
-    </section>
+  <div id="mensagens" class="chat-box"></div>
 
-    <!-- TICKETS -->
-    <section id="tickets" class="aba">
-      <h1>🎟 Tickets Administrativos</h1>
+  <div class="chat-input">
+    <input id="mensagem" placeholder="Digite sua mensagem..." />
+    <button onclick="enviarMensagem()">Enviar</button>
+    <button class="btn-secondary" onclick="mostrarAba('solicitacoes')">⬅ Voltar</button>
+  </div>
+</section>
 
-      <div class="grid">
-        <button onclick="abrirCategoria('Denúncia')">⚠️ Denúncia</button>
-        <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
-        <button onclick="abrirCategoria('Suporte')">🛠️ Suporte</button>
-        <button onclick="abrirCategoria('Processos')">📁 Processos</button>
-      </div>
-    </section>
+<!-- TICKETS ADMIN -->
+<section id="tickets" class="aba">
+  <h2>🎫 Tickets Administrativos</h2>
+  <div class="category-grid">
+    <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
+    <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
+    <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
+    <button onclick="abrirCategoria('Processos')">📁 Processos</button>
+  </div>
+</section>
 
-    <!-- CHAT -->
-    <section id="chat" class="aba">
-      <button class="voltar" onclick="mostrarAba('solicitacoes')">⬅ Voltar</button>
-      <h2 id="chatTitulo"></h2>
+<!-- PREÇOS -->
+<section id="precos" class="aba">
+  <h2>💰 Serviços Disponíveis ao Público</h2>
 
-      <div id="mensagens" class="chat"></div>
+  <div class="price-card">
+    <h3>🏛️ Atendimentos Jurídicos</h3>
+    <ul>
+      <li>Delegacia Sul — $20.000</li>
+      <li>Delegacia PRF — $30.000</li>
+    </ul>
 
-      <div class="envio">
-        <input id="mensagem" placeholder="Digite sua mensagem">
-        <button onclick="enviarMensagem()">Enviar</button>
-      </div>
-    </section>
+    <h4>Redução de Pena</h4>
+    <ul>
+      <li>Advogado: -20%</li>
+      <li>Confissão: -10%</li>
+      <li>Bom comportamento: -10%</li>
+      <li><b>Total possível: até 40%</b></li>
+    </ul>
+  </div>
 
-    <!-- PREÇOS -->
-    <section id="precos" class="aba">
-      <h1>⚖️ Serviços Disponíveis ao Público – Supremo Tribunal Oasis ⚖️</h1>
+  <div class="price-card">
+    <h3>💍 Certidões Civis</h3>
+    <ul>
+      <li>Casamento — $150.000</li>
+      <li>Divórcio — $200.000</li>
+      <li>Troca de Nome — $250.000</li>
+      <li>Adoção — $50.000</li>
+      <li>Nascimento — $50.000</li>
+      <li>Jovem Aprendiz — $30.000</li>
+    </ul>
+  </div>
 
-      <div class="preco-box">
-        <h2>🏛️ Atendimentos Jurídicos</h2>
-        <p>Delegacia Sul — <b>$ 20.000</b></p>
-        <p>Delegacia PRF — <b>$ 30.000</b></p>
+  <div class="price-card">
+    <h3>🔫 Porte de Arma</h3>
+    <ul>
+      <li>Emissão — $20.000</li>
+    </ul>
+  </div>
 
-        <h3>Redução de Pena (em caso de condenação)</h3>
-        <ul>
-          <li>Presença do advogado: -20% (anulado em caso de réu primário)</li>
-          <li>Colaboração com as investigações: valor negociável</li>
-          <li>Confissão do crime: -10%</li>
-          <li>Bom comportamento: -10%</li>
-        </ul>
-        <p><b>Total possível de redução: até 40%</b></p>
-      </div>
+  <div class="price-card">
+    <h3>🏢 Alvará</h3>
+    <ul>
+      <li>Abertura — $150.000</li>
+      <li>Renovação — $60.000</li>
+    </ul>
+  </div>
 
-      <div class="preco-box">
-        <h2>🔫 Porte de Arma</h2>
-        <p>Emissão de porte legal — <b>$ 20.000</b></p>
-      </div>
+  <div class="price-card">
+    <h3>🧾 Ações Jurídicas</h3>
+    <ul>
+      <li>Ação Judicial — $50.000</li>
+      <li>Limpeza de Ficha (1–3) — $50.000</li>
+      <li>A partir da 4ª: +$10.000</li>
+    </ul>
+  </div>
+</section>
 
-      <div class="preco-box">
-        <h2>💍 Certidões Civis</h2>
-        <p>Casamento (com discurso personalizado) — <b>$ 150.000</b></p>
-        <p>Divórcio — <b>$ 200.000</b></p>
-        <p>Troca de Nome — <b>$ 250.000</b></p>
-        <p>Adoção — <b>$ 50.000</b></p>
-        <p>Nascimento — <b>$ 50.000</b></p>
-        <p>Jovem Aprendiz — <b>$ 30.000</b></p>
-      </div>
-
-      <div class="preco-box">
-        <h2>🏢 Alvará de Funcionamento</h2>
-        <p>Abertura — <b>$ 150.000</b></p>
-        <p>Renovação — <b>$ 60.000</b></p>
-      </div>
-
-      <div class="preco-box">
-        <h2>🧾 Ações Jurídicas</h2>
-        <p>Ação Judicial (entrada de processo) — <b>$ 50.000</b></p>
-        <p>Limpeza de Ficha Criminal (1 a 3 ocorrências) — <b>$ 50.000</b></p>
-        <p class="obs">
-          Obs.: A partir da 4ª ocorrência, acréscimo de <b>$ 10.000</b> por infração.
-        </p>
-      </div>
-    </section>
-
-  </main>
-</div>
+</main>
 
 <script type="module" src="script.js"></script>
 </body>
