--- a/tickets.html
+++ b/tickets.html
@@ -5,35 +5,37 @@
   <title>Sistema de Atendimento — Tribunal de Justiça de Oasis</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body class="bg-paper">
 
-<header class="header small">
+<header class="header small official">
   <img src="logo-oasis.png" class="logo small" />
-  <div>
+  <div class="header-text">
     <h1>Tribunal de Justiça de Oasis</h1>
-    <span>Sistema Oficial de Atendimento</span>
+    <span>Sistema Oficial de Atendimento ao Cidadão</span>
   </div>
 </header>
 
-<nav class="nav-bar">
+<nav class="nav-bar official">
   <button onclick="mostrarAba('solicitacoes')">📂 Solicitações</button>
   <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
-  <button onclick="mostrarAba('tickets')">🎫 Tickets</button>
-  <button onclick="mostrarAba('precos')">💰 Preços</button>
-  <button onclick="sair()">🚪 Sair</button>
+  <button onclick="mostrarAba('tickets')">🎫 Administrativos</button>
+  <button onclick="mostrarAba('precos')">💰 Tabela de Serviços</button>
+  <button onclick="sair()">🚪 Encerrar Sessão</button>
 </nav>
 
-<main class="content">
+<main class="content official">
 
 <!-- SOLICITAÇÕES -->
 <section id="solicitacoes" class="aba active">
-  <h2>📂 Faça sua Solicitação</h2>
-  <p class="info-box">
-    Selecione abaixo a categoria correspondente à sua solicitação.
-    Apenas um ticket ativo por categoria.
-  </p>
+  <h2>📂 Abertura de Solicitação</h2>
 
-  <div class="category-grid">
+  <div class="info-box official">
+    Selecione a categoria correspondente ao seu pedido.<br />
+    <b>Regra:</b> Apenas um ticket ativo por categoria.
+  </div>
+
+  <div class="category-grid official">
     <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
     <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
     <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
@@ -47,28 +49,37 @@
 
 <!-- EM ANDAMENTO -->
 <section id="andamento" class="aba">
-  <h2>🕒 Tickets em Andamento</h2>
-  <p>Lista dos seus tickets ativos para acompanhamento.</p>
-  <div id="listaTickets" class="card-list"></div>
+  <h2>🕒 Acompanhamento de Tickets</h2>
+  <p class="section-desc">
+    Abaixo estão listados seus atendimentos em andamento.
+    Clique em um ticket para continuar o atendimento.
+  </p>
+
+  <div id="listaTickets" class="card-list official"></div>
 </section>
 
 <!-- CHAT -->
 <section id="chat" class="aba">
-  <h2 id="chatTitulo">💬 Atendimento</h2>
+  <h2 id="chatTitulo">💬 Atendimento Oficial</h2>
 
-  <div id="mensagens" class="chat-box"></div>
+  <div id="mensagens" class="chat-box official"></div>
 
-  <div class="chat-input">
-    <input id="mensagem" placeholder="Digite sua mensagem..." />
+  <div class="chat-input official">
+    <input id="mensagem" placeholder="Digite sua mensagem de forma clara e objetiva..." />
     <button onclick="enviarMensagem()">Enviar</button>
-    <button class="btn-secondary" onclick="mostrarAba('solicitacoes')">⬅ Voltar</button>
+    <button class="btn-secondary" onclick="mostrarAba('andamento')">⬅ Voltar</button>
   </div>
 </section>
 
-<!-- TICKETS ADMIN -->
+<!-- TICKETS ADMINISTRATIVOS -->
 <section id="tickets" class="aba">
-  <h2>🎫 Tickets Administrativos</h2>
-  <div class="category-grid">
+  <h2>🎫 Atendimentos Administrativos</h2>
+
+  <div class="info-box official">
+    Utilize estas opções para demandas administrativas e institucionais.
+  </div>
+
+  <div class="category-grid official">
     <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
     <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
     <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
@@ -80,55 +91,55 @@
 <section id="precos" class="aba">
   <h2>💰 Serviços Disponíveis ao Público</h2>
 
-  <div class="price-card">
+  <div class="price-card official">
     <h3>🏛️ Atendimentos Jurídicos</h3>
     <ul>
-      <li>Delegacia Sul — $20.000</li>
-      <li>Delegacia PRF — $30.000</li>
+      <li>Delegacia Sul — <b>$20.000</b></li>
+      <li>Delegacia PRF — <b>$30.000</b></li>
     </ul>
 
-    <h4>Redução de Pena</h4>
+    <h4>Redução de Pena (em caso de condenação)</h4>
     <ul>
-      <li>Advogado: -20%</li>
-      <li>Confissão: -10%</li>
-      <li>Bom comportamento: -10%</li>
+      <li>Presença de advogado — <b>-20%</b></li>
+      <li>Confissão — <b>-10%</b></li>
+      <li>Bom comportamento — <b>-10%</b></li>
       <li><b>Total possível: até 40%</b></li>
     </ul>
   </div>
 
-  <div class="price-card">
+  <div class="price-card official">
     <h3>💍 Certidões Civis</h3>
     <ul>
-      <li>Casamento — $150.000</li>
-      <li>Divórcio — $200.000</li>
-      <li>Troca de Nome — $250.000</li>
-      <li>Adoção — $50.000</li>
-      <li>Nascimento — $50.000</li>
-      <li>Jovem Aprendiz — $30.000</li>
+      <li>Casamento — <b>$150.000</b></li>
+      <li>Divórcio — <b>$200.000</b></li>
+      <li>Troca de Nome — <b>$250.000</b></li>
+      <li>Adoção — <b>$50.000</b></li>
+      <li>Nascimento — <b>$50.000</b></li>
+      <li>Jovem Aprendiz — <b>$30.000</b></li>
     </ul>
   </div>
 
-  <div class="price-card">
+  <div class="price-card official">
     <h3>🔫 Porte de Arma</h3>
     <ul>
-      <li>Emissão — $20.000</li>
+      <li>Emissão de porte legal — <b>$20.000</b></li>
     </ul>
   </div>
 
-  <div class="price-card">
-    <h3>🏢 Alvará</h3>
+  <div class="price-card official">
+    <h3>🏢 Alvará de Funcionamento</h3>
     <ul>
-      <li>Abertura — $150.000</li>
-      <li>Renovação — $60.000</li>
+      <li>Abertura — <b>$150.000</b></li>
+      <li>Renovação — <b>$60.000</b></li>
     </ul>
   </div>
 
-  <div class="price-card">
+  <div class="price-card official">
     <h3>🧾 Ações Jurídicas</h3>
     <ul>
-      <li>Ação Judicial — $50.000</li>
-      <li>Limpeza de Ficha (1–3) — $50.000</li>
-      <li>A partir da 4ª: +$10.000</li>
+      <li>Ação Judicial — <b>$50.000</b></li>
+      <li>Limpeza de Ficha (1 a 3 ocorrências) — <b>$50.000</b></li>
+      <li>A partir da 4ª ocorrência — <b>+$10.000</b></li>
     </ul>
   </div>
 </section>
