--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 </head>
 <body class="bg-paper">
 
-<header class="header">
+<header class="header official">
   <img src="logo-oasis.png" class="logo" />
-  <h1>Tribunal de Justiça de Oasis</h1>
-  <p>Central Oficial de Atendimento ao Cidadão</p>
+  <div>
+    <h1>Tribunal de Justiça de Oasis</h1>
+    <span>Central Oficial de Atendimento ao Cidadão</span>
+  </div>
 </header>
 
 <main class="login-container">
-  <div class="login-card">
+  <section class="login-card official">
     <h2>Central de Atendimento</h2>
     <p>
       Para abrir solicitações, acompanhar processos e acessar serviços oficiais,
-      é necessário realizar a autenticação.
+      é necessário realizar a autenticação institucional.
     </p>
 
-    <a class="btn-primary" href="login.html">
+    <a class="btn-primary" href="auth.html">
       🔐 Entrar com Discord
     </a>
-  </div>
+  </section>
 </main>
 
 <footer class="footer">
