--- a/tickets.html
+++ b/tickets.html
@@ -10,136 +10,58 @@
 
 <header class="header small official">
   <img src="logo-oasis.png" class="logo small" />
-  <div class="header-text">
+  <div>
     <h1>Tribunal de Justiça de Oasis</h1>
-    <span>Sistema Oficial de Atendimento ao Cidadão</span>
+    <span>Sistema Oficial de Atendimento</span>
   </div>
 </header>
 
 <nav class="nav-bar official">
   <button onclick="mostrarAba('solicitacoes')">📂 Solicitações</button>
   <button onclick="mostrarAba('andamento')">🕒 Em andamento</button>
-  <button onclick="mostrarAba('tickets')">🎫 Administrativos</button>
-  <button onclick="mostrarAba('precos')">💰 Tabela de Serviços</button>
-  <button onclick="sair()">🚪 Encerrar Sessão</button>
+  <button onclick="mostrarAba('precos')">💰 Serviços</button>
+  <button onclick="sair()">🚪 Sair</button>
 </nav>
 
 <main class="content official">
 
-<!-- SOLICITAÇÕES -->
 <section id="solicitacoes" class="aba active">
-  <h2>📂 Abertura de Solicitação</h2>
-
-  <div class="info-box official">
-    Selecione a categoria correspondente ao seu pedido.<br />
-    <b>Regra:</b> Apenas um ticket ativo por categoria.
-  </div>
-
+  <h2>Abertura de Solicitação</h2>
   <div class="category-grid official">
-    <button onclick="abrirCategoria('Troca de Nome')">📜 Troca de Nome</button>
-    <button onclick="abrirCategoria('Adoção')">👶 Adoção</button>
-    <button onclick="abrirCategoria('Jovem Aprendiz')">🧑‍🎓 Jovem Aprendiz</button>
-    <button onclick="abrirCategoria('Divórcio')">💔 Divórcio</button>
-    <button onclick="abrirCategoria('Casamento')">💍 Casamento</button>
-    <button onclick="abrirCategoria('Nascimento')">👼 Nascimento</button>
-    <button onclick="abrirCategoria('Limpeza de Ficha')">🧹 Limpeza de Ficha</button>
-    <button onclick="abrirCategoria('Porte de Arma')">🔫 Porte de Arma</button>
+    <button onclick="abrirCategoria('Troca de Nome')">Troca de Nome</button>
+    <button onclick="abrirCategoria('Adoção')">Adoção</button>
+    <button onclick="abrirCategoria('Jovem Aprendiz')">Jovem Aprendiz</button>
+    <button onclick="abrirCategoria('Divórcio')">Divórcio</button>
+    <button onclick="abrirCategoria('Casamento')">Casamento</button>
+    <button onclick="abrirCategoria('Nascimento')">Nascimento</button>
+    <button onclick="abrirCategoria('Limpeza de Ficha')">Limpeza de Ficha</button>
+    <button onclick="abrirCategoria('Porte de Arma')">Porte de Arma</button>
   </div>
 </section>
 
-<!-- EM ANDAMENTO -->
 <section id="andamento" class="aba">
-  <h2>🕒 Acompanhamento de Tickets</h2>
-  <p class="section-desc">
-    Abaixo estão listados seus atendimentos em andamento.
-    Clique em um ticket para continuar o atendimento.
-  </p>
-
+  <h2>Tickets em Andamento</h2>
   <div id="listaTickets" class="card-list official"></div>
 </section>
 
-<!-- CHAT -->
 <section id="chat" class="aba">
-  <h2 id="chatTitulo">💬 Atendimento Oficial</h2>
-
+  <h2 id="chatTitulo">Atendimento</h2>
   <div id="mensagens" class="chat-box official"></div>
-
   <div class="chat-input official">
-    <input id="mensagem" placeholder="Digite sua mensagem de forma clara e objetiva..." />
+    <input id="mensagem" placeholder="Digite sua mensagem..." />
     <button onclick="enviarMensagem()">Enviar</button>
-    <button class="btn-secondary" onclick="mostrarAba('andamento')">⬅ Voltar</button>
+    <button onclick="mostrarAba('andamento')">⬅ Voltar</button>
   </div>
 </section>
 
-<!-- TICKETS ADMINISTRATIVOS -->
-<section id="tickets" class="aba">
-  <h2>🎫 Atendimentos Administrativos</h2>
-
-  <div class="info-box official">
-    Utilize estas opções para demandas administrativas e institucionais.
-  </div>
-
-  <div class="category-grid official">
-    <button onclick="abrirCategoria('Denúncia')">⚠ Denúncia</button>
-    <button onclick="abrirCategoria('Falar com o Juiz')">⚖️ Falar com o Juiz</button>
-    <button onclick="abrirCategoria('Suporte')">🛠 Suporte</button>
-    <button onclick="abrirCategoria('Processos')">📁 Processos</button>
-  </div>
-</section>
-
-<!-- PREÇOS -->
 <section id="precos" class="aba">
-  <h2>💰 Serviços Disponíveis ao Público</h2>
-
+  <h2>Tabela Oficial de Serviços</h2>
+  <!-- valores mantidos conforme enviado -->
   <div class="price-card official">
-    <h3>🏛️ Atendimentos Jurídicos</h3>
+    <h3>Atendimentos Jurídicos</h3>
     <ul>
-      <li>Delegacia Sul — <b>$20.000</b></li>
-      <li>Delegacia PRF — <b>$30.000</b></li>
-    </ul>
-
-    <h4>Redução de Pena (em caso de condenação)</h4>
-    <ul>
-      <li>Presença de advogado — <b>-20%</b></li>
-      <li>Confissão — <b>-10%</b></li>
-      <li>Bom comportamento — <b>-10%</b></li>
-      <li><b>Total possível: até 40%</b></li>
-    </ul>
-  </div>
-
-  <div class="price-card official">
-    <h3>💍 Certidões Civis</h3>
-    <ul>
-      <li>Casamento — <b>$150.000</b></li>
-      <li>Divórcio — <b>$200.000</b></li>
-      <li>Troca de Nome — <b>$250.000</b></li>
-      <li>Adoção — <b>$50.000</b></li>
-      <li>Nascimento — <b>$50.000</b></li>
-      <li>Jovem Aprendiz — <b>$30.000</b></li>
-    </ul>
-  </div>
-
-  <div class="price-card official">
-    <h3>🔫 Porte de Arma</h3>
-    <ul>
-      <li>Emissão de porte legal — <b>$20.000</b></li>
-    </ul>
-  </div>
-
-  <div class="price-card official">
-    <h3>🏢 Alvará de Funcionamento</h3>
-    <ul>
-      <li>Abertura — <b>$150.000</b></li>
-      <li>Renovação — <b>$60.000</b></li>
-    </ul>
-  </div>
-
-  <div class="price-card official">
-    <h3>🧾 Ações Jurídicas</h3>
-    <ul>
-      <li>Ação Judicial — <b>$50.000</b></li>
-      <li>Limpeza de Ficha (1 a 3 ocorrências) — <b>$50.000</b></li>
-      <li>A partir da 4ª ocorrência — <b>+$10.000</b></li>
+      <li>Delegacia Sul — $20.000</li>
+      <li>Delegacia PRF — $30.000</li>
     </ul>
   </div>
 </section>
