--- a/callback.html
+++ b/callback.html
@@ -13,58 +13,55 @@
       align-items: center;
       height: 100vh;
       text-align: center;
+      color: #5a0f0f;
     }
   </style>
 </head>
 <body>
 
-<h2>🔐 Processando autenticação...</h2>
+<h2>🔐 Processando autenticação…</h2>
 
 <script>
+(async () => {
   try {
-    /* ===============================
-       1️⃣ SE VEIO COM ?code → ENVIA PARA O WORKER
-    =============================== */
     const params = new URLSearchParams(window.location.search);
-    const code = params.get("code");
-
-    if (code) {
-      window.location.href =
-        "https://sistema-oasis-auth.hinarah elo.workers.dev/callback?code=" + code;
-      throw new Error("Redirecionando para autenticação segura...");
-    }
-
-    /* ===============================
-       2️⃣ SE VEIO COM #user → FINALIZA LOGIN
-    =============================== */
     const hash = window.location.hash;
 
-    if (!hash.includes("user=")) {
-      throw new Error("Dados não recebidos");
+    // 🔁 CASO 1 — voltou do Discord com ?code=
+    if (params.get("code")) {
+      const code = params.get("code");
+
+      window.location.href =
+        "https://sistema-oasis-auth.hinarahelo.workers.dev/callback?code=" + code;
+      return;
     }
 
-    const encoded = hash.split("user=")[1];
-    const user = JSON.parse(decodeURIComponent(encoded));
+    // 🔁 CASO 2 — voltou do Worker com #user=
+    if (hash.includes("user=")) {
+      const encoded = hash.split("user=")[1];
+      const user = JSON.parse(decodeURIComponent(encoded));
 
-    localStorage.setItem("usuario", JSON.stringify(user));
+      localStorage.setItem("usuario", JSON.stringify(user));
 
-    /* ===============================
-       3️⃣ REDIRECIONAMENTO POR NÍVEL
-    =============================== */
-    if (user.nivel === "juridico" || user.nivel === "coordenacao") {
-      window.location.href = "staff/dashboard.html";
-    } else {
-      window.location.href = "tickets.html";
+      if (user.nivel === "juridico" || user.nivel === "coordenacao") {
+        window.location.href = "staff/dashboard.html";
+      } else {
+        window.location.href = "tickets.html";
+      }
+      return;
     }
+
+    throw new Error("Fluxo inválido");
 
   } catch (e) {
     console.error(e);
     document.body.innerHTML = `
-      <h2>❌ Erro ao autenticar</h2>
-      <p>Não foi possível concluir o login.</p>
-      <a href="index.html">Voltar</a>
+      <h2>❌ Erro de autenticação</h2>
+      <p>Não foi possível validar seu login.</p>
+      <a href="index.html">Voltar ao início</a>
     `;
   }
+})();
 </script>
 
 </body>
